--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -95,12 +95,12 @@
                                 <li>
                                    <span class="li_title" style="float:left; padding-right:110px;">수량</span>
 
-                                    <input type="text" name="prodQuantity" id="prodQuantity" class="input quantity" style="width:20%; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px; float:left;" value="1" >
+                                    <input type="text" name="prodQuantity" id="prodQuantity" class="input quantity" style="width:20%; height:25px; border:1px solid #d4d4d4; line-height:24px; font-size:12px; float:left;" value="1" >
                                     <a href="javascript:up('10');" style="color: #000; ">
-                                        <img src="{% static 'resource/img/sub/btn_quantity_up.gif' %}" alt="증가" class="QuantityUp">
+                                        <img src="{% static 'resource/img/sub/btn_quantity_up.png' %}" alt="증가" class="QuantityUp" style="border: 1px solid #d4d8d9;">
                                     </a>
                                     <a href="javascript:down('1');" style="color: #000;" >
-                                        <img src="{% static 'resource/img/sub/btn_quantity_down.gif' %}" alt="감소" class="QuantityDown">
+                                        <img src="{% static 'resource/img/sub/btn_quantity_down.png' %}" alt="감소" class="QuantityDown" style="border: 1px solid #d4d8d9;">
                                     </a>
                                 </li>
                                 <li>
