--- a/static/resource/css/layout.css
+++ b/static/resource/css/layout.css
@@ -926,12 +926,7 @@ body,th,td,input,select,textarea,button {font-size:24px;}
 	color:#646464;
 }
 .codingLounge_list ul li .text_area a.brd_detail {
-
-}
-
-
-
-/* review list */position:absolute;
+	position:absolute;
 	display:table;
 	right:1.25em;
 	bottom:1.25em;
@@ -940,6 +935,11 @@ body,th,td,input,select,textarea,button {font-size:24px;}
 	color:#b14739;
 	border:1px solid #b14739;
 	border-radius:3px;
+}
+
+
+
+/* review list */
 .review_top {
 	position:relative;
 	display:flex;
